@@ -964,6 +964,7 @@ IF NOT "%SOLR_SSL_OPTS%"=="" (
   set "START_OPTS=%START_OPTS% %SOLR_SSL_OPTS% !SSL_PORT_PROP!"
 )
 IF NOT "%SOLR_LOG_LEVEL%"=="" set "START_OPTS=%START_OPTS% -Dsolr.log.level=%SOLR_LOG_LEVEL%"
+set "START_OPTS=%START_OPTS% -Dsolr.log.dir=!SOLR_LOGS_DIR!"
 
 IF NOT DEFINED LOG4J_CONFIG set "LOG4J_CONFIG=file:%SOLR_SERVER_DIR%\resources\log4j.properties"
 
