@@ -95,9 +95,8 @@ SOLR_OPTS="$SOLR_OPTS -Xss256k"
 # This is an alternative to changing the rootLogger in log4j.properties
 #SOLR_LOG_LEVEL=INFO
 
-# Location where Solr should write logs to; should agree with the file appender
-# settings in server/resources/log4j.properties
-#SOLR_LOGS_DIR=
+# Location where Solr should write logs to. Absolute or relative to solr start dir
+#SOLR_LOGS_DIR=logs
 
 # Sets the port Solr binds to, default is 8983
 #SOLR_PORT=8983
