@@ -1,5 +1,5 @@
 #  Logging level
-solr.log=${solr.solr.home}/../logs
+solr.log=${solr.log.dir}
 log4j.rootLogger=INFO, file
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
