@@ -1,6 +1,6 @@
 # Default Solr log4j config
 # rootLogger log level may be programmatically overridden by -Dsolr.log.level
-solr.log=logs
+solr.log=${solr.log.dir}
 log4j.rootLogger=INFO, file, CONSOLE
 
 # Console appender will be programmatically disabled when Solr is started with option -Dsolr.log.muteconsole
