@@ -131,6 +131,8 @@ Bug Fixes
 
 * SOLR-9411: Better validation for Schema REST API add-dynamic-field (janhoy)
 
+* SOLR-9325: solr.log is now written to $SOLR_LOGS_DIR without changing log4j.properties (janhoy)
+
 Optimizations
 ----------------------
 
